--- a/portfolio.html
+++ b/portfolio.html
@@ -59,97 +59,223 @@
             </li>
           </ul>
           <ul class="projects-list">
-            <li class="project-card">
-              <img
-                alt="laptop with website opened"
-                width="370"
-                height="294"
-                src="./images/website.jpg"
-              />
-              <h4 class="project-card-header">Technocrack</h4>
-              <p class="project-card-desc">Strona Internetowa</p>
+            <li>
+              <figure class="project-card">
+                <div class="project-card-container">
+                  <img
+                    alt="laptop with website opened"
+                    width="370"
+                    height="294"
+                    src="./images/website.jpg"
+                  />
+                  <div class="project-card-overlay">
+                    <p class="project-card-overlay-text">
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <figcaption>
+                  <h4 class="project-card-header">Technocrack</h4>
+                  <p class="project-card-desc">Strona Internetowa</p>
+                </figcaption>
+              </figure>
             </li>
-            <li class="project-card">
-              <img
-                alt="two basketball players fighting for the ball"
-                width="370"
-                height="294"
-                src="./images/basketball.jpg"
-              />
-              <h4 class="project-card-header">
-                Grafika New Orlean vs Golden Star
-              </h4>
-              <p class="project-card-desc">Dizajn</p>
+            <li>
+              <figure class="project-card">
+                <div class="project-card-container">
+                  <img
+                    alt="two basketball players fighting for the ball"
+                    width="370"
+                    height="294"
+                    src="./images/basketball.jpg"
+                  />
+                  <div class="project-card-overlay">
+                    <p class="project-card-overlay-text">
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <figcaption>
+                  <h4 class="project-card-header">
+                    Grafika New Orlean vs Golden Star
+                  </h4>
+                  <p class="project-card-desc">Dizajn</p>
+                </figcaption>
+              </figure>
             </li>
-            <li class="project-card">
-              <img
-                alt="text that says The Seafood with a fish in the background"
-                width="370"
-                height="294"
-                src="./images/seafood.jpg"
-              />
-              <h4 class="project-card-header">Restauracja Seafood</h4>
-              <p class="project-card-desc">Aplikacja</p>
+            <li>
+              <figure class="project-card">
+                <div class="project-card-container">
+                  <img
+                    alt="text that says The Seafood with a fish in the background"
+                    width="370"
+                    height="294"
+                    src="./images/seafood.jpg"
+                  />
+                  <div class="project-card-overlay">
+                    <p class="project-card-overlay-text">
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <figcaption>
+                  <h4 class="project-card-header">Restauracja Seafood</h4>
+                  <p class="project-card-desc">Aplikacja</p>
+                </figcaption>
+              </figure>
             </li>
-            <li class="project-card">
-              <img
-                alt="headphones with a white background"
-                width="370"
-                height="294"
-                src="./images/headphones.jpg"
-              />
-              <h4 class="project-card-header">Projekt Prime</h4>
-              <p class="project-card-desc">Marketing</p>
+            <li>
+              <figure class="project-card">
+                <div class="project-card-container">
+                  <img
+                    alt="headphones with a white background"
+                    width="370"
+                    height="294"
+                    src="./images/headphones.jpg"
+                  />
+                  <div class="project-card-overlay">
+                    <p class="project-card-overlay-text">
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <figcaption>
+                  <h4 class="project-card-header">Projekt Prime</h4>
+                  <p class="project-card-desc">Marketing</p>
+                </figcaption>
+              </figure>
             </li>
-            <li class="project-card">
-              <img
-                alt="a big white box and a small brown box next to it"
-                width="370"
-                height="294"
-                src="./images/two_boxes.jpg"
-              />
-              <h4 class="project-card-header">Projekt Boxes</h4>
-              <p class="project-card-desc">Aplikacja</p>
+            <li>
+              <figure class="project-card">
+                <div class="project-card-container">
+                  <img
+                    alt="a big white box and a small brown box next to it"
+                    width="370"
+                    height="294"
+                    src="./images/two_boxes.jpg"
+                  />
+                  <div class="project-card-overlay">
+                    <p class="project-card-overlay-text">
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <figcaption>
+                  <h4 class="project-card-header">Projekt Boxes</h4>
+                  <p class="project-card-desc">Aplikacja</p>
+                </figcaption>
+              </figure>
             </li>
-            <li class="project-card">
-              <img
-                alt="monitor with a dark themed website on the screen"
-                width="370"
-                height="294"
-                src="./images/monitor.jpg"
-              />
-              <h4 class="project-card-header">Inpiration has no Borders</h4>
-              <p class="project-card-desc">Strona Internetowa</p>
+            <li>
+              <figure class="project-card">
+                <div class="project-card-container">
+                  <img
+                    alt="monitor with a dark themed website on the screen"
+                    width="370"
+                    height="294"
+                    src="./images/monitor.jpg"
+                  />
+                  <div class="project-card-overlay">
+                    <p class="project-card-overlay-text">
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <figcaption>
+                  <h4 class="project-card-header">Inpiration has no Borders</h4>
+                  <p class="project-card-desc">Strona Internetowa</p>
+                </figcaption>
+              </figure>
             </li>
-            <li class="project-card">
-              <img
-                alt="an opened book"
-                width="370"
-                height="294"
-                src="./images/book.jpg"
-              />
-              <h4 class="project-card-header">Magazyn Limited Edition</h4>
-              <p class="project-card-desc">Dizajn</p>
+            <li>
+              <figure class="project-card">
+                <div class="project-card-container">
+                  <img
+                    alt="an opened book"
+                    width="370"
+                    height="294"
+                    src="./images/book.jpg"
+                  />
+                  <div class="project-card-overlay">
+                    <p class="project-card-overlay-text">
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <figcaption>
+                  <h4 class="project-card-header">Magazyn Limited Edition</h4>
+                  <p class="project-card-desc">Dizajn</p>
+                </figcaption>
+              </figure>
             </li>
-            <li class="project-card">
-              <img
-                alt="a label tag"
-                width="370"
-                height="294"
-                src="./images/tag.jpg"
-              />
-              <h4 class="project-card-header">Projekt LAB</h4>
-              <p class="project-card-desc">Marketing</p>
+            <li>
+              <figure class="project-card">
+                <div class="project-card-container">
+                  <img
+                    alt="a label tag"
+                    width="370"
+                    height="294"
+                    src="./images/tag.jpg"
+                  />
+                  <div class="project-card-overlay">
+                    <p class="project-card-overlay-text">
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <figcaption>
+                  <h4 class="project-card-header">Projekt LAB</h4>
+                  <p class="project-card-desc">Marketing</p>
+                </figcaption>
+              </figure>
             </li>
-            <li class="project-card">
-              <img
-                alt="person typing on a laptop"
-                width="370"
-                height="294"
-                src="./images/laptop.jpg"
-              />
-              <h4 class="project-card-header">Growing Business</h4>
-              <p class="project-card-desc">Aplikacja</p>
+            <li>
+              <figure class="project-card">
+                <div class="project-card-container">
+                  <img
+                    alt="person typing on a laptop"
+                    width="370"
+                    height="294"
+                    src="./images/laptop.jpg"
+                  />
+                  <div class="project-card-overlay">
+                    <p class="project-card-overlay-text">
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <figcaption>
+                  <h4 class="project-card-header">Growing Business</h4>
+                  <p class="project-card-desc">Aplikacja</p>
+                </figcaption>
+              </figure>
             </li>
           </ul>
         </div>
