--- a/index.html
+++ b/index.html
@@ -112,28 +112,37 @@
           <h2 class="our-work-header">Czym się zajmujemy</h2>
           <ul class="our-work-list">
             <li>
-              <img
-                width="370"
-                height="294"
-                src="./images/typing.png"
-                alt="typing on keyboard"
-              />
+              <div class="our-work-container">
+                <img
+                  width="370"
+                  height="294"
+                  src="./images/typing.png"
+                  alt="typing on keyboard"
+                />
+                <h3>APLIKACJE KOMPUTEROWE</h3>
+              </div>
             </li>
             <li>
-              <img
-                width="370"
-                height="294"
-                src="./images/phone.png"
-                alt="person holding a phone with a laptop in the background"
-              />
+              <div class="our-work-container">
+                <img
+                  width="370"
+                  height="294"
+                  src="./images/phone.png"
+                  alt="person holding a phone with a laptop in the background"
+                />
+                <h3>APLIKACJE MOBILNE</h3>
+              </div>
             </li>
             <li>
-              <img
-                width="370"
-                height="294"
-                src="./images/color.png"
-                alt="tablet with hexagonal color palette"
-              />
+              <div class="our-work-container">
+                <img
+                  width="370"
+                  height="294"
+                  src="./images/color.png"
+                  alt="tablet with hexagonal color palette"
+                />
+                <h3>APLIKACJE GRAFICZNE</h3>
+              </div>
             </li>
           </ul>
         </div>
