--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,19 @@
         <nav class="section-header-nav">
           <a class="logo" href="./index.html">Web<span>Studio</span></a>
           <ul class="section-header-list">
-            <li><a class="links" href="./index.html">Agencja</a></li>
-            <li><a class="links" href="#">Portfolio</a></li>
-            <li><a class="links">Kontakt</a></li>
+            <li>
+              <div class="link-underline">
+                <a class="links" href="./index.html">Agencja</a>
+              </div>
+            </li>
+            <li>
+              <div class="link-underline">
+                <a class="links" href="#">Portfolio</a>
+              </div>
+            </li>
+            <li>
+              <div class="link-underline"><a class="links">Kontakt</a></div>
+            </li>
           </ul>
         </nav>
         <ul class="section-header-contact-list">
