--- a/index.html
+++ b/index.html
@@ -18,17 +18,13 @@
           <a class="logo" href="#">Web<span>Studio</span></a>
           <ul class="section-header-list">
             <li>
-              <div class="link-underline">
-                <a class="links" href="#">Agencja</a>
-              </div>
+              <a class="links link-underline" href="#">Agencja</a>
             </li>
             <li>
-              <div class="link-underline">
-                <a class="links" href="./portfolio.html">Portfolio</a>
-              </div>
+              <a class="links" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
-              <div class="link-underline"><a class="links">Kontakt</a></div>
+              <a class="links">Kontakt</a>
             </li>
           </ul>
         </nav>
@@ -112,37 +108,31 @@
           <h2 class="our-work-header">Czym się zajmujemy</h2>
           <ul class="our-work-list">
             <li>
-              <div class="our-work-container">
-                <img
-                  width="370"
-                  height="294"
-                  src="./images/typing.png"
-                  alt="typing on keyboard"
-                />
-                <h3>APLIKACJE KOMPUTEROWE</h3>
-              </div>
+              <img
+                width="370"
+                height="294"
+                src="./images/typing.png"
+                alt="typing on keyboard"
+              />
+              <h3>APLIKACJE KOMPUTEROWE</h3>
             </li>
             <li>
-              <div class="our-work-container">
-                <img
-                  width="370"
-                  height="294"
-                  src="./images/phone.png"
-                  alt="person holding a phone with a laptop in the background"
-                />
-                <h3>APLIKACJE MOBILNE</h3>
-              </div>
+              <img
+                width="370"
+                height="294"
+                src="./images/phone.png"
+                alt="person holding a phone with a laptop in the background"
+              />
+              <h3>APLIKACJE MOBILNE</h3>
             </li>
             <li>
-              <div class="our-work-container">
-                <img
-                  width="370"
-                  height="294"
-                  src="./images/color.png"
-                  alt="tablet with hexagonal color palette"
-                />
-                <h3>APLIKACJE GRAFICZNE</h3>
-              </div>
+              <img
+                width="370"
+                height="294"
+                src="./images/color.png"
+                alt="tablet with hexagonal color palette"
+              />
+              <h3>APLIKACJE GRAFICZNE</h3>
             </li>
           </ul>
         </div>
@@ -161,30 +151,34 @@
               <h3 class="team-member-header">John Doe</h3>
               <p class="team-member-profession">Product Designer</p>
               <ul class="team-member-social-list">
-                <a class="team-member-social-link"
-                  ><li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#instagram"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#twitter"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#facebook"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#linkedin"></use>
-                    </svg></li
-                ></a>
+                    </svg>
+                  </a>
+                </li>
               </ul>
             </li>
             <li class="team-member-card">
@@ -197,30 +191,34 @@
               <h3 class="team-member-header">John Doe</h3>
               <p class="team-member-profession">Frontend Developer</p>
               <ul class="team-member-social-list">
-                <a class="team-member-social-link"
-                  ><li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#instagram"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#twitter"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#facebook"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#linkedin"></use>
-                    </svg></li
-                ></a>
+                    </svg>
+                  </a>
+                </li>
               </ul>
             </li>
             <li class="team-member-card">
@@ -233,30 +231,34 @@
               <h3 class="team-member-header">John Doe</h3>
               <p class="team-member-profession">Marketing</p>
               <ul class="team-member-social-list">
-                <a class="team-member-social-link"
-                  ><li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#instagram"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#twitter"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#facebook"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#linkedin"></use>
-                    </svg></li
-                ></a>
+                    </svg>
+                  </a>
+                </li>
               </ul>
             </li>
             <li class="team-member-card">
@@ -269,30 +271,34 @@
               <h3 class="team-member-header">John Doe</h3>
               <p class="team-member-profession">UI Designer</p>
               <ul class="team-member-social-list">
-                <a class="team-member-social-link"
-                  ><li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#instagram"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#twitter"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#facebook"></use>
-                    </svg></li
-                ></a>
-                <a class="team-member-social-link"
-                  ><li>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-member-social-link">
+                  <a>
                     <svg class="team-member-social-svg">
                       <use href="./images/icons.svg#linkedin"></use>
-                    </svg></li
-                ></a>
+                    </svg>
+                  </a>
+                </li>
               </ul>
             </li>
           </ul>
@@ -302,42 +308,48 @@
         <div class="container">
           <h2 class="our-customers-header">Nasi Klienci</h2>
           <ul class="our-customers-list">
-            <a
-              ><li class="our-customer-element">
+            <li class="our-customer-element">
+              <a>
                 <svg class="customer-svg">
                   <use href="./images/icons.svg#yaco"></use>
-                </svg></li
-            ></a>
-            <a
-              ><li class="our-customer-element">
+                </svg>
+              </a>
+            </li>
+            <li class="our-customer-element">
+              <a>
                 <svg class="customer-svg">
                   <use href="./images/icons.svg#company-book"></use>
-                </svg></li
-            ></a>
-            <a
-              ><li class="our-customer-element">
+                </svg>
+              </a>
+            </li>
+            <li class="our-customer-element">
+              <a>
                 <svg class="customer-svg">
                   <use href="./images/icons.svg#company"></use>
-                </svg></li
-            ></a>
-            <a
-              ><li class="our-customer-element">
+                </svg>
+              </a>
+            </li>
+            <li class="our-customer-element">
+              <a>
                 <svg class="customer-svg">
                   <use href="./images/icons.svg#foster-peters"></use>
-                </svg></li
-            ></a>
-            <a
-              ><li class="our-customer-element">
+                </svg>
+              </a>
+            </li>
+            <li class="our-customer-element">
+              <a>
                 <svg class="customer-svg">
                   <use href="./images/icons.svg#brand"></use>
-                </svg></li
-            ></a>
-            <a
-              ><li class="our-customer-element">
+                </svg>
+              </a>
+            </li>
+            <li class="our-customer-element">
+              <a>
                 <svg class="customer-svg">
                   <use href="./images/icons.svg#company-tag"></use>
-                </svg></li
-            ></a>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
@@ -365,30 +377,34 @@
         <div>
           <h3 class="footer-socials-header">DOŁĄCZ DO NAS</h3>
           <ul class="footer-socials-list">
-            <a class="footer-socials-link"
-              ><li>
+            <li class="footer-socials-link">
+              <a>
                 <svg class="footer-socials-svg">
                   <use href="./images/icons.svg#instagram"></use>
-                </svg></li
-            ></a>
-            <a class="footer-socials-link"
-              ><li>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-link">
+              <a>
                 <svg class="footer-socials-svg">
                   <use href="./images/icons.svg#twitter"></use>
-                </svg></li
-            ></a>
-            <a class="footer-socials-link"
-              ><li>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-link">
+              <a>
                 <svg class="footer-socials-svg">
                   <use href="./images/icons.svg#facebook"></use>
-                </svg></li
-            ></a>
-            <a class="footer-socials-link"
-              ><li>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-link">
+              <a>
                 <svg class="footer-socials-svg">
                   <use href="./images/icons.svg#linkedin"></use>
-                </svg></li
-            ></a>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
