--- a/portfolio.html
+++ b/portfolio.html
@@ -18,17 +18,13 @@
           <a class="logo" href="./index.html">Web<span>Studio</span></a>
           <ul class="section-header-list">
             <li>
-              <div class="link-underline">
-                <a class="links" href="./index.html">Agencja</a>
-              </div>
+              <a class="links" href="./index.html">Agencja</a>
             </li>
             <li>
-              <div class="link-underline">
-                <a class="links" href="#">Portfolio</a>
-              </div>
+              <a class="links link-underline" href="#">Portfolio</a>
             </li>
             <li>
-              <div class="link-underline"><a class="links">Kontakt</a></div>
+              <a class="links">Kontakt</a>
             </li>
           </ul>
         </nav>
