--- a/index.html
+++ b/index.html
@@ -412,7 +412,9 @@
     <div data-modal class="backdrop is-hidden">
       <div class="modal-window">
         <button data-modal-close type="button" class="modal-close-btn">
-          X
+          <svg>
+            <use href="./images/icons.svg#x_close"></use>
+          </svg>
         </button>
       </div>
     </div>
